# table-cascade

./: example.db  main.py  pyproject.toml  table.py  watch.py
tests/sqlite/: db.py
