[tool.poetry]
name = "table-cascade"
version = "0.1.0"
description = ""
authors = ["Bunga Razvan <razvanbunga@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
