[tool.poetry]
name = "table-cascade"
version = "0.1.0"
description = ""
authors = ["Bunga Razvan <razvanbunga@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.12"
sqlalchemy = "^2.0.36"
pyvis = "^0.3.2"
pyqt5 = "^5.15.11"


[tool.poetry.group.dev.dependencies]
watchdog = "^5.0.3"
pytest = "^7.0"
black = "^22.0"
flake8 = "^4.0"
isort = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
